[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Joystick/Joystick.gd" type="Script" id=1]
[ext_resource path="res://assets/onscreencontrols/flatDark00.png" type="Texture" id=2]
[ext_resource path="res://assets/onscreencontrols/flatDark06.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.847059, 0.109804, 0.109804, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 5
anti_aliasing = false

[node name="Joystick" type="Control"]
margin_right = 128.0
margin_bottom = 128.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickBackground" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickThumbstick" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 16, 16 )
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deadzone" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.4
margin_top = -6.4
margin_right = 6.4
margin_bottom = 6.4
rect_min_size = Vector2( 12.8, 12.8 )
rect_pivot_offset = Vector2( 6.4, 6.4 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="JoystickBackground" to="." method="_on_JoystickTexture_gui_input"]
